logs/mediakeysserver.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MediaKeysServer'...
Listing './lib/python3.5/site-packages/MediaKeysServer/agents'...
Compiling './lib/python3.5/site-packages/MediaKeysServer/agents/uitk.py'...
***   File "./lib/python3.5/site-packages/MediaKeysServer/agents/uitk.py", line 24
    print "uiagent.__init__: end"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/MediaKeysServer/res'...
Compiling './lib/python3.5/site-packages/MediaKeysServer/res/__init__.py'...
***   File "./lib/python3.5/site-packages/MediaKeysServer/res/__init__.py", line 15
    print get_res_path()
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/MediaKeysServer/scripts'...
Compiling './lib/python3.5/site-packages/MediaKeysServer/scripts/main.py'...
***   File "./lib/python3.5/site-packages/MediaKeysServer/scripts/main.py", line 55
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/MediaKeysServer/system'...
Compiling './lib/python3.5/site-packages/MediaKeysServer/system/app_osx.py'...
***   File "./lib/python3.5/site-packages/MediaKeysServer/system/app_osx.py", line 42
    print self.icon_path
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/MediaKeysServer/system/base.py'...
***   File "./lib/python3.5/site-packages/MediaKeysServer/system/base.py", line 59
    print "************* mdispatch: dropped: orig(%s) obj_orig(%s) mtype(%s)" % (orig, this_source, mtype)
                                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/MediaKeysServer/system/mswitch.py'...
***   File "./lib/python3.5/site-packages/MediaKeysServer/system/mswitch.py", line 131
    print ":::: do_interest: source(%s) mtype(%s) interest(%s) snooping(%s)" % (agent_name, mtype, interest, snooping)
                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/MediaKeysServer/system/util.py'...
***   File "./lib/python3.5/site-packages/MediaKeysServer/system/util.py", line 24
    print "%s: %s" % (app_name, msg)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/MediaKeysServer/system/websocket.py'...
***   File "./lib/python3.5/site-packages/MediaKeysServer/system/websocket.py", line 147
    print "onMessage: %s" % data
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mediakeysserver-0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
